ecmascript/parser/tests/typescript-errors/type-only-export-specifier/duplicated-type-only/input.ts.stderr
error: The 'type' modifier cannot be used on a named export when 'export type' is used on its export statement.
 --> $DIR/tests/typescript-errors/type-only-export-specifier/duplicated-type-only/input.ts:1:15
  |
1 | export type { type something }
  |               ^^^^

